--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,9 +5,11 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Feedback App</title>
+    <!-- could do og:meta... -->
   </head>
   <body>
     <div id="app"></div>
+    <div id="modal-container"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
