Add quick favicon

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Feedback App</title>
     <!-- could do og:meta... -->
+    <!-- could do icons -->
   </head>
   <body>
     <div id="app"></div>
